@@ -27,6 +27,7 @@ python_files = __init__.py	\
 	loadrecipe.py		\
 	lookaside.py		\
 	macros.py		\
+	manifest.py		\
 	mirror.py		\
 	nextversion.py		\
 	packagepolicy.py	\
